# Market-State-News-Tensor-Architecture

./: README.md  pyproject.toml
docs/: architecture.md  data_contract.md  events.md  experiment_governance.md  labeling.md  tasks.md  validation.md
src/market_state_news_tensor/: __init__.py
src/market_state_news_tensor/data/: point_in_time.py  universe.py
src/market_state_news_tensor/events/: ontology.py
src/market_state_news_tensor/features/: market.py
src/market_state_news_tensor/labels/: fixed_horizon.py  triple_barrier.py
src/market_state_news_tensor/schemas/: events.py  experiments.py  labels.py  market.py  universe.py
src/market_state_news_tensor/validation/: costs.py
tests/: test_costs_and_labels.py  test_event_ontology.py  test_market_features.py  test_point_in_time.py  test_schemas.py  test_universe.py
